--- a/_posts/2014-01-01-001.markdown
+++ b/_posts/2014-01-01-001.markdown
@@ -4,6 +4,13 @@ title:  "قلب شما"
 categories: ghalbe-shoma
 ---
 ## آناتومی قلب
+<audio controls>
+  <source src="{{ site.baseurl }}/voice/Anatomy.mp3" type="audio/mpeg">
+  
+  مرورگر شما از پخش فایل های چند رسانه ای پشتیبانی نمیکند.
+  
+</audio>
+
 <img src="{{ site.baseurl }}/images/Anatomy.jpg" style="display: block;
 margin-left: auto;
 margin-right: auto;
