--- a/_posts/2014-01-01-008.markdown
+++ b/_posts/2014-01-01-008.markdown
@@ -4,6 +4,10 @@ title:  "درد و ناراحتی قفسه سینه"
 categories: alayem_va_avarez
 ---
 <!-- ezafe kardane tasvir -->
+<img src="{{ site.baseurl }}/images/heartburn.jpg" style="display: block;
+margin-left: auto;
+margin-right: auto;
+width: 400px;">
 بیشتر مردم درد قفسه سینه را از جمله علایمی نام میبرند که همراهی نزدیکی با بروز حمله قلبی دارد.اما اغلب اوقات علایمی که فرد در اثر انسداد سرخرگ های کرونری تجربه میکند،به صورت دردهای شدید و آزارنده نمیباشد.افرادیکه دچار حمله قلبی شده اند،میگویند که احساسی که در حین این حملات داشته اند،درد نبوده است بلکه یک احساس ناراحتی مثل فشرده شدن یا فشار بوده است.یک واقعیت تا حدی گیج‌کننده و مبهم این است که درد قفسه سینه ممکن است ناشی از بیماری‌های قلبی به غیر از حمله قلبی باشد و نیز ممکن است نتیجه بیماری‌های غیر قلبی نظیر بیماری‌های کیسه صفرا،اختلال عضلانی یا مشکل گوارشی باشد.
 مهمترین مشخصه متمایز کننده درد ناشی از بیماری سرخرگ های کرونری از سایر دردها،شاید ارتباط آن با استرس های جسمی و روانی باشد که اغلب در این نوع استرس ها نیاز قلب به اکسیژن افزایش می‌یابد که اگر بدون پاسخ باقی بماند موجب ایجاد درد قفسه سینه میشود.باید به درد سینه‌هایی که در حین خواب و استراحت رخ میدهند بلافاصله رسیدگی پزشکی کرد،بویژه در افرادیکه دارای عوامل خطر حملات قلبی می باشند.ممکن است اولین درد سینه نشانه بروز حملات قلبی محتمل الوقوع باشد،لذا در رفتن به نزد پزشک به هیچ وجه درنگ نکنید.
 
