--- a/_posts/2014-01-01-017.markdown
+++ b/_posts/2014-01-01-017.markdown
@@ -20,7 +20,8 @@ height: 550px;">
 margin-left: auto;
 margin-right: auto;
 width: 400px;
-height: 400px;">
+float:left;
+">
 شامل انواع نان، برنج، ماکارونی، غلات صبحانه، گندم و جو.
 
 گروه نان و غلات در قاعده هرم غذایی قرار دارد که بزرگترین بخش هرم است. یعنی در طول روز باید از موادغذایی این گروه بیشتر از دیگر گروه‌های غذایی استفاده کرد. این گروه به علت داشتن مواد نشاسته‌ای، به عنوان موادغذایی تأمین کننده انرژی محسوب می‌شوند. علاوه بر آن فیبر، انواع ویتامین‌های گروه ب، آهن، پروتئین و منیزیم را نیز تأمین می‌کنند. مصرف گروه نان و غلات برای تأمین انرژی، رشد و سلامت دستگاه عصبی لازم است.
@@ -38,7 +39,7 @@ height: 400px;">
 margin-left: auto;
 margin-right: auto;
 width: 400px;
-height: 400px;">
+">
 - این گروه شامل انواع میوه‌ها است و مصرف روزانه 4-2 واحد از آن توصیه می‌شود.
 - هر واحد میوه شامل: یک عدد میوه متوسط، نصف لیوان میوه‌های دانه شده (انگور و...)، نصف لیوان آب میوه تازه و طبیعی و یک چهارم لیوان میوه خشک است.
 - هر واحد میوه حاوی 15 گرم کربوهیدرات و 60 کیلوکالری انرژی است.
@@ -51,7 +52,7 @@ height: 400px;">
 margin-left: auto;
 margin-right: auto;
 width: 400px;
-height: 400px;">
+">
 - این گروه شامل انواع سبزی‌هاست و مصرف روزانه 5-3 واحد از آن توصیه می‌شود.
 - هر واحد سبزی شامل: یک لیوان از انواع سبزی‌های خام، نصف لیوان سبزی‌های پخته، نصف لیوان آب سبزی‌ها و یک عدد سیب زمینی متوسط است.
 - هر واحد سبزی دارای 3-2 گرم فیبر غذایی است. سبزی‌ها منبع خوب ویتامین‌ها و مواد معدنی هستد.
@@ -135,7 +136,7 @@ height: 400px;">
 margin-left: auto;
 margin-right: auto;
 width: 400px;
-height: 400px;">
+">
 
 شامل: شیر، ماست، پنیر، کشک، دوغ و بستنی.
 
@@ -150,7 +151,7 @@ height: 400px;">
 margin-left: auto;
 margin-right: auto;
 width: 400px;
-height: 400px;">
+">
 
 
 شامل: انواع گوشت قرمز (گوسفند و گوساله)، گوشت سفید (مرغ، ماهی و پرندگان)، تخم مرغ و سایر پرندگان، حبوبات (عدس، انواع لوبیا، لپه، نخود و...) و مغزها (گردو، بادام، فندق و...)
@@ -160,11 +161,9 @@ height: 400px;">
 هر واحد از این گروه برابر است با: 60 گرم گوشت لخم پخته شده (دو قطعه خورشتی)، نصف ران متوسط یا نصف سینه متوسط مرغ، یا دو عدد تخم مرغ یا نصف لیوان حبوبات پخته، یا یک سوم لیوان انواع مغزها (گردو، فندق، بادام، پسته و تخمه).
 
 برای افراد بزرگسال سالم روزانه مصرف 3-2 واحد از گروه گوشت، حبوبات، تخم مرغ و مغزها توصیه می‌شود.
-<img src="{{ site.baseurl }}/images/hobobat.jpeg" style="display: block;
-margin-left: auto;
-margin-right: auto;
+<img src="{{ site.baseurl }}/images/hobobat.jpeg" style="
 width: 400px;
-height: 400px;">
+">
 
 
 ## گروه متفرقه
@@ -172,7 +171,7 @@ height: 400px;">
 margin-left: auto;
 margin-right: auto;
 width: 400px;
-height: 400px;">
+">
 
 گروه متفرقه (چربی‌ها و قندها) در رأس هرم غذایی قرار گرفته است. این گروه شامل انواع روغن‌ها، سس‌ها، شیرینی، شکلات، نوشابه‌های گازدار، آب میوه‌های صنعتی و ... می‌باشد.
 
@@ -181,7 +180,7 @@ height: 400px;">
 margin-left: auto;
 margin-right: auto;
 width: 400px;
-height: 400px;">
+">
 
 
 ## توصیه‌های مهم:
@@ -203,8 +202,8 @@ height: 400px;">
 - مصرف غذاهای شور امکان ابتلاء  به فشار خون بالا را تشدید می‌کند، مصرف نمک را کاهش دهید.اگر در خانواده‌ی خود سابقه‌ی این بیماری را دارید حتماً به این توصیه، جدی‌تر عمل کنید.
 
 
-
-<h2 onclick='toggle(this)'  id="more-button">نقش ماهی در سلامت قلب</h2>
+<ul style="list-style:none;">
+<li><h2  onclick='toggle(this)'  id="more-button">نقش ماهی در سلامت قلب</h2>
 
 <div class="more">
 
@@ -315,8 +314,8 @@ height: 400px;">
 <p>با توجه به فواید بی‌شمار و با ارزش ماهی و تأثیر آن بر سلامتی سیستم قلب و عروق، باید فرهنگ مصرف آن گسترش یابد و با حذف و کاهش نارسایی‌هایی که در مسیر دسترسی خانواده‌ها به این ماده غذایی مهم وجود دارد، برای آن جای مناسبی در سبد و سفره غذایی خانوار ایرانی باز کنیم.</p>
 
 </div>
-
-<h2 onclick='toggle(this)'  id="more-button">نقش آنتی اکسیدان‌ها در سلامت</h2>
+</li>
+<li><h2 onclick='toggle(this)'  id="more-button">نقش آنتی اکسیدان‌ها در سلامت</h2>
 
 <div class="more">
  
@@ -405,9 +404,9 @@ height: 400px;">
 <p> از بین بردن خاصیت سمی ترکیبات نامطلوب</p>
 <p> حفظ و تقویت عملکرد سیستم ایمنی</p>
 </div>
+</li>
 
-
-<h2 onclick='toggle(this)'  id="more-button"> چربی ها و روغن ها</h2>
+<li><h2 onclick='toggle(this)'  id="more-button"> چربی ها و روغن ها</h2>
 
 <div class="more">
 <p>چربیها و روغن‌ها از مهم‌ترین اجزای غذای انسان به شمار می‌روند و همه ما هر روز مقادیری از این ماده غذایی را مصرف می‌کنیم. چربی‌ها در تمام سلول‌ها و بافت‌های بدن وجود دارند و نقشی حیاتی در غشای سلولی ایفا می‌کنند. همچنین چربیها به صورت پوشش و لایه محافظ در اطراف بعضی از اعضا و اندامهای بدن یافت می‌شوند.</p>
@@ -466,10 +465,12 @@ height: 400px;">
 
 <img src="{{ site.baseurl }}/images/chart.png" class="post-images" style="max-width:707px;" alt="Chart">
 
+</div>
+</li>
+</ul>
 
-
-<h3> اسید های چرب</h3>
-
+<li><h2 onclick='toggle(this)'  id="more-button"> اسید های چرب</h2>
+<div class="more">
 <p>اسیدهای چرب دارای یک زنجیره هیدروکربنه بوده که سر آن گروه متیل (CH3) و انتهای آن گروه کربوکسیل (COOH) قرار دارد. زمانیکه در این زنجیره کربن، پیوند دوگانه (C=C) وجود نداشته باشد به این نوع اسیدچرب، اسیدچرب اشباع (SFA)1 می‌گویند. مانند اسید پالمتیک که دارای ۱۶ کربن بوده و هیچ پیوند دوگانه در این زنجیره وجود ندارد. انواع اسیدهای چرب معمول در رژیم غذایی  در جدول شماره ۱ مشاهده می‌شود.</p>
 
 <p>اگر در زنجیره کربن پیوند دوگانه وجود داشته باشد به آن اسیدچرب غیراشباع می‌گویند. اسیدهای چرب دارای یک پیوند غیراشباع (مونو) و بیش از یک پیوند غیراشباع (پلی) نامیده می‌شوند. اسید اولئیک یک اسید چرب مونو غیراشباع ۱۸ کربنه می‌باشد.</p>
@@ -1181,10 +1182,11 @@ height: 400px;">
 <p>کلسترول خون شامل کلسترول تام (TC)، کلسترول خوب (HDL) و کلسترول بد (LDL) می‌باشد. این تقسیم‌بندی براساس دانسیته لیپوپروتئین‌هایی است که کلسترول در ساختمان آنها وارد شده است. کلسترول تام مجموع کلسترول خوب (HDL) و کلسترول بد (LDL) می‌باشد. در صورتی که مقدار کلسترول بد (LDL) یا Low Density Lipoprotein در خون ازحد مطلوب بالاتر برود، سبب سختی عروق آترواسکلروز می‌شود و احتمال افزایش فشارخون و سکته قلبی را افزایش می‌دهد.</p>
 
 <p>اسیدهای چرب اشباع باعث افزایش کلسترول بد (LDL)و در عین حال، کلسترول خوب (HDL)  می‌شوند و در نتیجه کلسترول تام را افزایش می‌دهند. اسیدهای چرب ترانس که در اثر هیدروژناسیون روغن‌های مایع و تبدیل آنها به روغن‌های جامد تولید می‌شود، میزان کلسترول بد را به مراتب بیشتر از اسیدهای چرب اشباع افزایش می‌دهند و در نهایت اثرات سوء آنها بر سلامت انسان بیش از اسیدهای چرب اشباع می‌باشد.</p>
+</div>
+</li>
 
-
-<h3>الگوی مصرف روغن و چربی ها<h3>
-
+<li><h2 onclick='toggle(this)'  id="more-button">الگوی مصرف روغن و چربی ها</h2>
+<div class="more">
 <p>طبق توصیه سازمان جهانی بهداشت روغن و چربی می‌تواند حداقل ۱۵٪ و حداکثر 30٪ از نیاز انرژی روزانه هر فرد را تأمین کند. همچنین اسیدهای چرب اشباع حداقل ۷٪ و حداکثر ۱۰٪ از نیاز روزانه، اسیدهای چرب تک غیراشباعی (MUFA) کمتر از ۱۵٪ انرژی روزانه و اسیدهای چرب چند غیراشباعی (PUFA) کمتر از ۱۰٪ انرژی روزانه افراد را باید تأمین کنند.</p>
 
 ,p>برای تعیین مقادیر چربی و روغن مصرفی افراد باید فاکتورهایی از قبیل سن، جنس و فعالیت روزانه برای تعیین مقدار انرژی موردنیاز در نظر گرفته شود. همچنین مقادیر فوق شامل چربی‌های مرئی و نامرئی رژیم غذایی می‌شود که در عادات غذایی افراد مختلف متفاوت است.</p>
@@ -1228,7 +1230,7 @@ height: 400px;">
 <p>حتی‌الامکان از مصرف غذاهای سرخ کرده خودداری شود و در صورت لزوم از روغن مخصوص سرخ کردنی استفاده شود.</p>
 <p> روغن مایع مخصوص سرخ کردنی در مقابل حرارت پایدار است، اما این موضوع بدان معنی نیست که از این نوع روغن چندین بار می‌توان برای سرخ کردن استفاده کرد. از روغن مخصوص سرخ کردن حداکثر ۲-۳ بار آن هم نه با فاصله زمانی طولانی بلکه حدوداً در عرض ۲۴ ساعت می‌توان استفاده کرد و پس از آن باید روغن حرارت دیده را دور ریخت.</p>
 <p> روغن نباید در هیچ مرحله‌ای بوی تند داشته باشد. ظهور بوی نامطبوع نشانه فساد روغن است.</p>
-<p> فراورده‌های غذایی چرب مثل چیپس، کیک و بیسکویت باید در محل خشک، خنک، تاریک و به دور از هوا نگهداری کرد. بطورکلی مصرف چیپس به دلیل مقادیر زیاد روغن و نمک توصیه نمی‌شود.</p>
+<p> فراورده‌های غذایی چرب مثل چیپس، کیک و بیسکویت باید در محل خشک، خنک، تاریک و به د<div class="more">ور از هوا نگهداری کرد. بطورکلی مصرف چیپس به دلیل مقادیر زیاد روغن و نمک توصیه نمی‌شود.</p>
 <p> موادغذایی حاوی چربی را باید در ظروف بسته یا بسته بندی مناسب در یخچال نگهداری کرد.</p>
 
 <h3>به منظور كم كردن چربي مصرفي در رژيم غذايي بايستي: </h3>
@@ -1244,11 +1246,12 @@ height: 400px;">
 <p> نمك مورد استفاده در هنگام طبخ را محدود نمائید.</p>
 <p> بر چسب مواد غذايي آماده را بخوانيد و در صورتيكه نمك/ سديم از سه جزء اول آن است،  سعي كنيد حتي المقدور آن را استفاده ننمائید.<p/>
 <p> سعي كنيد به منظور مطبوع نمودن طعم غذاها به جاي نمك از سبزيجات معطر و برای مزه دار کردن غذا به جای مواد چربي، ليموترش يا آبليمو یا آبغوره استفاده نماييد.</p>
-
 </div>
+</li>
 
-<h3>چرا باید مصرف سدیم (نمک) خود را محدود نماییم؟</h3>
 
+<li><h2  onclick='toggle(this)'  id="more-button">چرا باید مصرف سدیم (نمک) خود را محدود نماییم؟</h2>
+<div class="more">
 <p>نمک همان کلریدسدیم می‌باشد. سدیم یک عنصر موردنیاز برای سلامتی شما می‌باشد و شما می‌بایست همواره میان آب و سدیم بدن خود، تعادل برقرار نمایید. وجود مقدار زیاد آب یا مقدار زیاد سدیم در بدن، این تعادل را از بین می‌برد. زمانی که شما سالم هستید، کلیه‌های شما جهت حفظ این تعادل میان آب و سدیم، سدیم اضافی را دفع می‌نماید.</p>
 
 <h3>ویژگی بد سدیم چیست؟</h3>
@@ -1262,12 +1265,12 @@ height: 400px;">
 <h3>منابع سدیم کدام هستند؟</h3>
 
 <p>منشأ بیشتر سدیم موجود در رژیم غذایی ما از نمک افزوده شده به غذا در هنگام آماده سازی آن می‌باشد. به برچسب غذایی غذاها توجه کنید چرا که به شما می‌گویند که در محصول مربوطه چقدر سدیم وجود دارد.</p>
-<h3>در اینجا لیستی از موادی که حاوی میزان بالایی از سدیم هستند ذکر شده است که شما باید میزان مصرف آنها را در غذای خود محدود کنید:</p>
+<h4>در اینجا لیستی از موادی که حاوی میزان بالایی از سدیم هستند ذکر شده است که شما باید میزان مصرف آنها را در غذای خود محدود کنید:</h4>
 
 <p> نمک (کلریدسدیم یا NaCL)</p>
 <p> مونوسدیم گلوتامات (MSG).</p>
  <p>جوش شیرین نان‌پزی</p>
-<p> پودر نان‌پزی (بکینگ پودر)<p>
+<p> پودر نان‌پزی (بکینگ پودر)</p>
 <p> دی سدیم فسفات</p>
 <p> هر ترکیبی که در نام خود دارای «سدیم» یا Na  می‌باشد.</p>
 
@@ -1295,9 +1298,11 @@ height: 400px;">
 <p>با پزشک، پرستار یا مشاور سلامتی خود مشورت کنید. اگر مبتلا به بیماری قلبی می‌باشید یا قبلاً دچار سکته مغزی شده‌اید، چون این بیماری‌ها زمینه‌ی ارثی دارند ممکن است اعضای خانواده شما هم در معرض خطر ابتلاء به این بیماری‌ها باشند. ایجاد تغییرات در سبک زندگی آنها جهت کاهش میزان خطر مهم است.  </p>
 <p>شما می‌توانید از کتابچه‌ها و بروشورهای علمی جهت انتخاب زندگی سالمتر و کاهش میزان خطر، کنترل بیماری و مراقبت از افراد مورد علاقه‌تان استفاده کنید. دانایی توانایی است بنابراین بیشتر بیاموزید و بیشتر زندگی کنید.</p>
 
+</div>
+</li>
 
-<h3>چگونه برچسب‌های غذایی را بخوانیم؟ </h3>
-
+<h2 onclick='toggle(this)'  id="more-button">چگونه برچسب‌های غذایی را بخوانیم؟ </h2>
+<div class="more">
 <p>هنگامی که شما به مغازه خواروبار فروشی می‌روید، مدتی را به مطالعه برچسب‌های غذایی خریدهای خود اختصاص بدهید. اجزاء و کالری موجود در یک غذا را با غذاهای دیگر مقایسه کنید. ممکن است برخی از اطلاعات شما را شگفت زده نمایند. شما باید مطمئن شوید که غذاهای حاوی چربی اشباع و کلسترول بالا را به منزل نمی‌برید.</p>
 
 <p>یک راه ساده تر جهت خرید سالم‌تر در مغازه خواروبار فروشی اختصاص زمان بیشتر در محلی است که غذاهای تازه نگهداری و فروخته می‌شوند. زمان کمتری را در قسمتی که غذاهای بسته بندی، نوشیدنی‌های شیرین و تنقلات نگهداری می‌شوند، سپری نمایید.</p>
@@ -1320,3 +1325,6 @@ height: 400px;">
 <p> پروتئین: پروتئین حیوانی همراه با چربی و کلسترول می‌باشد. در نتیجه میزان کمتری از آن را مصرف نمایید.</p>
 <p> ویتامین‌ها و موادمعدنی: مصرف انواع مختلف غذاها به شما در دستیابی به ۱۰۰% ویتامین A، ویتامین C، کلسیم و آهن مورد نیاز کمک می‌کند.</p>
 <p> ارزش غذایی روزانه: این راهنمایی برای افرادی است که روزانه ۲۰۰۰کالری غذا مصرف می‌کنند. اگر شما بیشتر یا کمتر از این مقدار مصرف می‌کنید، ممکن است ارزش غذایی روزانه شما بیشتر یا کمتر باشد. غذاهایی را انتخاب کنید که درصد کمتری از ارزش غذایی روزانه چربی، چربی اشباع، کلسترول و سدیم را دارند. سعی کنید ۱۰۰درصد ارزش غذایی روزانه کربوهیدرات کل، فیبرغذایی، ویتامین‌ها و مواد معدنی را مصرف کنید.</p>
+</div>
+</li>
+</ul>
